feat: architecture implementation - 23 tasks across 4 phases (#132)
* feat: implement Flyway database migration tool

* fix: align scm-product password defaults with other services

* ci: consolidate CI workflows into single pipeline

* fix: correct init database env vars to match init-all-databases.sh

* ci: implement deployment pipeline for dev and prod

* fix: match deploy-prod image tag to docker-build output format

* ci: add JaCoCo coverage thresholds (70% line, 60% branch)

* ci: make SonarCloud and OWASP blocking quality gates

* feat: implement PostgreSQL HA with Patroni

* feat: implement Redis Sentinel for high availability

* fix: replace single redis with sentinel cluster, add networks, remove duplicate

* security: enable X-Content-Type-Options header by default

* security: restrict CORS allowedHeaders to specific headers

* security: implement SSRF protection filter

* docs: define Service Level Objectives for all services

* ops: implement Prometheus alerting rules

* docs: create operational runbooks for incident response

* ops: implement database backup automation

* feat: implement comprehensive health check endpoints

* test: implement contract testing with Pact

* test: implement mutation testing with PIT

* test: implement E2E testing with Playwright

* feat: implement horizontal pod autoscaling

* feat: migrate to Kubernetes deployment

* docs: create disaster recovery plan

* feat: implement chaos engineering with Chaos Mesh

* feat: implement event sourcing for orders

* fix: add OrderEventMapper and Jackson annotations for event sourcing

---------

Co-authored-by: 厚礼蟹 <16126806+dengxingzhi@user.noreply.gitee.com>